fix: dark mode for btn-primary-outline

--- a/src/styles.css
+++ b/src/styles.css
@@ -105,11 +105,11 @@
   }
 
   .btn-primary-outlined {
-    @apply btn-primary bg-transparent text-primary border border-red-600 dark:hover:bg-red-700 dark:focus:ring-red-800;
+    @apply btn-primary bg-transparent text-primary border border-red-600 dark:hover:bg-red-700 dark:focus:ring-red-800 dark:text-gray-100 dark:bg-transparent;
   }
 
   .btn-gray-outlined {
-    @apply flex rounded-lg border border-gray-400 px-5 py-2.5 text-center text-sm font-medium text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-800;
+    @apply flex rounded-lg border border-gray-400 px-5 py-2.5 text-center text-sm font-medium text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-800 dark:text-gray-100 dark:bg-transparent;
   }
 
   /* title decoration */
@@ -139,7 +139,7 @@
   }
 
   .text-link {
-    @apply text-secondary;
+    @apply text-secondary fill-secondary;
   }
 
   .text-warning {
